feat: news 오류 수정